--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -41,3 +41,43 @@
   font-weight: 900;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Inter";
+  src: url("./assets/fonts/static/Inter_18pt-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("./assets/fonts/static/Inter_18pt-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("./assets/fonts/static/Inter_18pt-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("./assets/fonts/static/Inter_18pt-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("./assets/fonts/static/Inter_24pt-ExtraBold.ttf") format("truetype");
+  font-weight: 900;
+  font-display: swap;
+}
+
+body {
+  background: white;
+  color: black;
+}
